fix: out of bounds router elements

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,5 +2,5 @@
   display: block;
   margin-left: 4rem;
   padding: 1rem;
-  max-height: 100%;
+  height: 100%;
 }
